# cookie-clicker-tui

./: .gitignore  Cargo.toml
cookie-clicker-tui/: Cargo.toml
cookie-clicker-tui-core/: Cargo.toml
cookie-clicker-tui-core/src/: building.rs  lib.rs  num.rs
cookie-clicker-tui-core/src/upgrade/: simple_tiered.rs
cookie-clicker-tui-macros/: Cargo.toml
cookie-clicker-tui-macros/src/: lib.rs  name.rs
src/: app.rs  main.rs  num.rs  ui.rs
src/app/: building.rs  cookies.rs  state.rs  ticker.rs
src/app/util/: countdown.rs
src/ui/: buildings.rs  cookies.rs  debug.rs  mod.rs  ticker.rs  upgrades.rs  util.rs
src/ui/util/: mod.rs  modal.rs  num.rs
tui/: Cargo.toml
tui-calc/: Cargo.toml
tui-calc/src/: cost.rs  cpc.rs  cps.rs  lib.rs  thousand_fingers.rs  upgrade.rs  wrinkler.rs
tui-calc/src/cps/: addl.rs  base.rs  building.rs  kittens.rs
tui-core/: Cargo.toml
tui-core/src/: achievement.rs  achivement.rs  building.rs  calc.rs  changeset.rs  click.rs  cookies.rs  cost.rs  cps.rs  golden_cookie.rs  grandmapocalypse.rs  lib.rs  macros.rs  milk.rs  news.rs  num.rs  req.rs  requirement.rs  research.rs  spawner.rs  sugar_lumps.rs  thousand_fingers.rs  ticker.rs  upgrade.rs
tui-core/src/grandmapocalypse/: wrinkler.rs
tui-core/src/upgrade/: click_and_cursor.rs  effect_info.rs  grandma.rs  grandma_co_tiered.rs  grandma_job.rs  kitten.rs  research.rs  simple_tiered.rs  switch.rs  tiered.rs
tui-utils/: Cargo.toml
tui-utils/src/: countdown.rs  frames.rs  lib.rs  macros.rs  num.rs  refresh.rs  str.rs
tui/src/: app.rs  audio.rs  event.rs  main.rs  save.rs  storage.rs
tui/src/app/: bakery.rs  changeset.rs  debug.rs  interface.rs  list.rs  mod.rs  modal.rs  news.rs  tick.rs
tui/src/ui/: achievement.rs  achivement.rs  buildings.rs  cookies.rs  debug.rs  flash.rs  golden_cookies.rs  mod.rs  modal.rs  news.rs  ticker.rs  upgrades.rs
tui/src/ui/modal/: building.rs  mod.rs  rename_bakery.rs  upgrade.rs  wrinklers.rs
tui/src/ui/utils/: mod.rs  num.rs  shop.rs  style.rs  upgrade.rs  widget.rs
