[workspace]
resolver = "3"
members = [
  "cookie-clicker-tui",
  "cookie-clicker-tui-core",
  "cookie-clicker-tui-utils",
]

[workspace.dependencies]
anyhow = "1.0.98"
approx-eq-trait = "0.1.1"
clap = { version = "4.5.41", features = ["derive"] }
cookie-clicker-tui-core = { path = "./cookie-clicker-tui-core" }
cookie-clicker-tui-utils = { path = "./cookie-clicker-tui-utils" }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
enum-assoc = "1.2.4"
enum-fun = { version = "0.1.5", features = ["name-includes-plural"] }
futures = "0.3.31"
rand = "0.9.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tui-widget-list = "0.13.2"
