[package]
name = "cookie-clicker-tui-core"
version = "0.1.0"
edition = "2024"

[dependencies]
approx-eq-trait.workspace = true
cookie-clicker-tui-calc.workspace = true
cookie-clicker-tui-utils.workspace = true
enum-assoc.workspace = true
enum-fun.workspace = true
rand.workspace = true
serde.workspace = true
