[package]
name = "cookie-clicker-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cookie-clicker-tui-core.workspace = true
cookie-clicker-tui-utils.workspace = true
crossterm.workspace = true
dirs.workspace = true
enum-assoc.workspace = true
enum-fun.workspace = true
futures.workspace = true
rand.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
soloud.workspace = true
tokio.workspace = true
tui-widget-list.workspace = true
